# Custom-Compiler

./: .gitignore  CMakeLists.txt  Makefile  MyCustomLoopInterchange.cpp  PARSER_OPTIMIZATIONS.md  README.md  READMe.md  Readme.md  cleantype.txt  compiler.h  ebnf-grammer.md  enum.txt  lexer.cpp  lexer.html  llvm.cpp  llvm_test.cpp  main.cpp  make.bat  makefile  manual_lexer.cpp  optimized_tac.txt  parser copy.cpp  parser.cpp  parser.y  regex_lexer.cpp  run.bat  scope.cpp  tac.cpp  tac.txt  test copy.code  test.c  test.code  test_clean.txt  test_compiler.cpp  test_input.txt  test_scope_errors.txt  type.cpp
BSCS22078-parser/: README.md  grammer.bnf  source.c
abdullah-54/: Readme.md  lexer.cpp  lexer.hpp  manual_lexer.cpp  parser.cpp  parser.y  regex_lexer.cpp  tac.cpp  test.txt  type.cpp
ahmad-78/: README.md  cfg.md  ebnf-grammer.md  lexer.cpp  lexer.md  parser.cpp  test_code.txt
arshad-69/: main.cpp  manual_lexer.cpp  parser.cpp  parser.h  parseralone.cpp  regex_lexer.cpp  scope-analyzer.cpp  scope.cpp  typeCheck.cpp
bazil-72/: PRATT_PARSER.md  README.md  compiler.h  ebnf-grammer.md  lexer.cpp  llvm_test.cpp  make.bat  manual_lexer.cpp  parser.cpp  pratt-parser-custom.cpp  pratt-parser.cpp  regex_lexer.cpp  scope-parser.cpp  scope.cpp  type.cpp
cpp-version/: Makefile  compiler.h  main.cpp  parser.cpp
docs/: IR_OPTIMIZATION.md
lexical-analyzer/: custom-lexer.cpp  lexer.cpp
parser/: Readme.md  grammer.bnf
src/: ast.rs  ast_printer.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  test_input.txt  token.rs
tester/: sample.txt  tokens.txt  valid.txt
(+27 files in other folders)
